[package]
name = "stereo-delay"
version = "1.0.1"
edition = "2024"
rust-version = "1.85"
description = "A stereo offset VST3 plugin for Studio One Pro"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[workspace]
members = ["xtask"]

[profile.release]
lto = "thin"
strip = "symbols"
